app/assets/stylesheets/base.scss
/*-----------------------------------------------------------*\

  $BASE

  Base rules are the defaults. They are almost exclusively
  single element selectors. Essentially, a base style says
  that whatever this element is on the page, it should look
  like this.

  I include normalize and then add my own base rules here.

  SNOOK is against reset sheets - he prefers crafted resets.
  However, I don't want to be left managing updates to the
  reset sheet. By keeping a copy I can diff with any new
  version.

\*-----------------------------------------------------------*/

@import 'colors';

/*------------------------------------------------------------------*\

   $BASE

\*------------------------------------------------------------------*/

*,
*:before,
*:after {
  box-sizing: border-box;
}

body {
  background-color: $neutral;
  color: $primary-text;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  /* font size left alone and all sizes are relative using em
     argument to go for rem (size of font relative to html element) */
}

/*------------------------------------------------------------------*\

   $TYPOGRAPHY
   Sizes from type-scale.com - generates typographic scales
   - Using perfect fourth (multiplication of 1.333)
   - Starting with an h4 of 1em, h3 or 1.333em and h2 of 1.77em etc.
   - Demoed in SMACSS on Tuts

\*------------------------------------------------------------------*/

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: normal;
}

h1 {
  font-size: 2.369em;
  margin-bottom: .2em;
  margin-top: .2em;
}

h2 {
  font-size: 1.77em;
  margin-bottom: .2em;
  margin-top: .2em;
}

h3 {
  font-size: 1.33em;
  margin-bottom: .5em;
  margin-top: .3em;
}

h4 {
  font-size: 1em;
  margin-bottom: .4em;
  margin-top: .5em;
}

h5 {
  font-size: .75em;
}

h6 {
  font-size: .563em;
}

/*---------------------------------------------------*\

  $LINKS

\*---------------------------------------------------*/


a {
  text-decoration: underline;

  &:link,
  &:visited {
    color: $primary-link;
  }

  &:hover,
  &:active {
    background-color: $secondary-background;
    color: white;
  }
}

/*---------------------------------------------------*\

  $LIST

\*---------------------------------------------------*/

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

/*--------------------------------------------------*\

  $DIVIDER

\*--------------------------------------------------*/

hr {
  background-color: $muted-border;
  border: 0;
  clear: both;
  float: none;
  height: 1px;
  margin: .8em 0;
  width: 100%;
}

/*---------------------------------------------------*\

  $FORMS

\*---------------------------------------------------*/

input,
textarea {
  border: 1px solid $muted-border;
  border-radius: 5px;
  outline: none;
  width: 90%;
}

input[type=submit] {
  padding: 2%;
}

input[readonly='readonly'] {
  background-color: $disabled-background;
  color: $primary-text;
}

input[type='checkbox'] {
  height: 20px;
  width: 20px;
}

// placeholder text-align

::-webkit-input-placeholder {
  text-align: center;
}

// Firefox 19+
::-moz-placeholder {
  text-align: center;
}

:-ms-input-placeholder {
  text-align: center;
}

@media print {
// h2 is the title and is used in almost every page printout.
// Change to a realistic size for heading and date.

  h2 {
    font-size: 1.2em;
    margin-bottom: .2em;
    margin-top: .2em;
    text-align: center;
  }
}

